--- a/configs/bert_config.yml
+++ b/configs/bert_config.yml
@@ -11,7 +11,7 @@ model_class: [Bert, BertCRF, BertBiLSTMCRF]
 # path
 data_dir: ./data/
 finetune_model_dir: ./tmp/models/
-pretrained_model_dir: ../pretrained/chinese_wwm_ext_pytorch
+pretrained_model_dir: ./pretrained/chinese_wwm_ext_pytorch
 output_dir: ./tmp/outputs/
 
 # pretrain
