--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-numpy==1.16.4
+tqdm==4.59.0
+pytorch_transformers==1.2.0
+pynvml==8.0.4
+Django==3.2
+numpy==1.19.2
+torch==1.6.0
+seaborn==0.11.1
 gensim==3.8.0
-pytorch-transformers==1.1.0
-torch==1.1.0
-TorchSnooper==0.7
-Django==2.0.5
-scikit-learn==0.21.3
-tqdm==4.23.4
+matplotlib==3.4.1
+PyYAML==5.4.1
+scikit_learn==0.24.1
