--- a/configs/bert_config.yml
+++ b/configs/bert_config.yml
@@ -6,7 +6,7 @@
 
 # global
 name: bert-pytorch
-model_class: [BertCRF] #[Bert, BertCRF, BertBiLSTMCRF]
+model_class: [Bert, BertCRF] #[Bert, BertCRF, BertBiLSTMCRF]
 
 # path
 data_dir: ./data/
@@ -25,33 +25,33 @@ use_cuda: True
 gpu_memory: 8192
 
 # model
-dropout_rate: 0.2
+dropout_rate: 0
 random_seed: 1301
-max_seq_length: 256
+max_seq_length: 512
 lower_case: True
 
 # optimizer
 optimizer_type: adamw
-learning_rate: !!float 5e-5
+learning_rate: 0.0001
 warmup_proportion: 0.1
 max_grad_norm: 1.0
-weight_decay: 0.01
+weight_decay: 0.00005
 l2_rate: 1.0e-8
 momentum: 0.
-lr_decay: 0.05
+lr_decay: 0.00001
 
 # epoch
-batch_size: 12
-nb_epoch: 15
+batch_size: 64
+nb_epoch: 50
 save_checkpoint: True
 average_batch: False
 
 # early stopping
-max_patience: 5
+max_patience: 10
 
 # rnn
 bert_embedding: 768
-rnn_hidden: 100
+rnn_hidden: 500
 rnn_layers: 1
 
 # eval
