--- a/configs/bert_config.yml
+++ b/configs/bert_config.yml
@@ -6,7 +6,7 @@
 
 # global
 name: bert-pytorch
-model_class: [Bert, BertCRF] #[Bert, BertCRF, BertBiLSTMCRF]
+model_class: [Bert] #[Bert, BertCRF, BertBiLSTMCRF]
 
 # path
 data_dir: ./data/
@@ -25,7 +25,7 @@ use_cuda: True
 gpu_memory: 8192
 
 # model
-dropout_rate: 0
+dropout_rate: 0.5
 random_seed: 1301
 max_seq_length: 256
 lower_case: True
